--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
   <title>Taco Cloud</title>
@@ -8,7 +8,10 @@
 
 <body>
   <h1>Welcome to...</h1>
-  <img th:src="@{/images/TacoCloud.png}" alt="image not found"/>
+  <img alt="image not found"
+       width="500" height="500"
+       src="./static/images/TacoCloud.png/TacoCloud.png"
+       th:src="@{/images/TacoCloud.png}"/>
 </body>
 
 </html>
