--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,8 +10,10 @@
   <h1>Welcome to...</h1>
   <img alt="image not found"
        width="500" height="500"
-       src="./static/images/TacoCloud.png/TacoCloud.png"
+       src="../static/images/TacoCloud.png"
        th:src="@{/images/TacoCloud.png}"/>
+
+  <a th:href="@{/design}" id="design">Design a taco</a>
 </body>
 
 </html>
