--- a/src/main/resources/templates/successfulOrder.html
+++ b/src/main/resources/templates/successfulOrder.html
@@ -3,16 +3,15 @@
       xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
-  <title>Taco Cloud</title>
+    <title>Taco Cloud</title>
 </head>
 
 <body>
 <img alt="image not found"
      width="100" height="100"
      th:src="@{/images/TacoCloud.png}"/>
-
-<h1>Welcome to Cinco De Mayo!</h1>
-<a th:href="@{/design}" id="design">Design a taco</a>
+<h1>Your order is successful!</h1>
+<a th:href="@{/}" id="design">Return home</a>
 </body>
 
 </html>
