--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -12,9 +12,16 @@
 
 <form method="POST" th:object="${taco}">
 
-  <span class="validationError"
-        th:if="${#fields.hasErrors('ingredients')}"
-        th:errors="*{ingredients}">Ingredient Error</span>
+      <span class="validationError"
+            th:if="${#fields.hasErrors('ingredients')}"
+            th:errors="*{ingredients}">Ingredient Error
+      </span>
+
+<!--    <div th:if="${#fields.hasErrors()}">-->
+<!--        <span class="validationError">-->
+<!--        Please correct the problems below and resubmit.-->
+<!--        </span>-->
+<!--    </div>-->
 
     <div class="grid">
         <div class="ingredient-group" id="wraps">
