--- a/src/main/resources/templates/registrationForm.html
+++ b/src/main/resources/templates/registrationForm.html
@@ -22,8 +22,8 @@
     <label for="confirm">Confirm password: </label>
     <input type="password" name="confirm"/><br/>
 
-    <label for="fullname">Full name: </label>
-    <input type="text" name="fullname"/><br/>
+    <label for="fullName">Full name: </label>
+    <input type="text" name="fullName"/><br/>
 
     <label for="street">Street: </label>
     <input type="text" name="street"/><br/>
