styling the code

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org" lang="en">
-
+      xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Taco Cloud</title>
 </head>
 
   <body>
+    <h1>Welcome to...</h1>
     <img alt="image not found"
          width="100" height="100"
          th:src="@{/images/TacoCloud.png}"/>
-
-    <h1>Welcome to Cinco De Mayo!</h1>
-      <form method="POST" th:action="@{/login}" id="logoutForm">
+    <form method="POST" th:action="@{/logout}" id="logoutForm">
         <input type="submit" value="Logout"/>
-      </form>
+    </form>
+
     <a th:href="@{/design}" id="design">Design a taco</a>
   </body>
-
 </html>
