--- a/src/main/resources/templates/registrationForm.html
+++ b/src/main/resources/templates/registrationForm.html
@@ -7,9 +7,9 @@
 
 <body>
 <h1>Register</h1>
-<img    alt="ing not found"
-        width="100" height="100"
-        th:src="@{/images/TacoCloud.png}"/>
+<img alt="image not found"
+     width="100" height="100"
+     th:src="@{/images/TacoCloud.png}"/>
 
 <form method="POST" th:action="@{/register}" id="registerForm">
 
