--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,8 @@
 
 <body>
 <h1>Login</h1>
-<img width="100" height="100"
+<img alt="image not found"
+     width="100" height="100"
      th:src="@{/images/TacoCloud.png}"/>
 
 <div th:if="${error}">
