--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -19,6 +19,8 @@
 
 <form th:method="POST" th:object="${taco}" th:action="@{/design}" id="tacoForm">
 
+    **_(<input type="hidden" name="_csrf" th:value="${_csrf.token}"/>)_**
+
     <span class="validationError"
           th:if="${#fields.hasErrors('ingredients')}"
           th:errors="*{ingredients}">Ingredient Error</span>
