--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -10,7 +10,7 @@
 
 <form method="POST" th:action="@{/orders}" th:object="${tacoOrder}">
 
-    **_(<input type="hidden" name="_csrf" th:value="${_csrf.token}"/>)_**
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
 
     <img alt="image not found"
          width="100" height="100"
