some tests written

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -23,7 +23,8 @@
 
     <span class="validationError"
           th:if="${#fields.hasErrors('ingredients')}"
-          th:errors="*{ingredients}">Ingredient Error</span>
+          th:errors="*{ingredients}">Ingredient Error
+    </span>
 
     <div class="grid">
         <div class="ingredient-group" id="wraps">
